apps/workloads/media/kometa/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kometa-policy
spec:
  endpointSelector:
    matchLabels:
      app: kometa
  # ----=== Egress ===----
  egress:
    # === Allow DNS ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: "UDP"
            - port: "53"
              protocol: "TCP"
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: radarr-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-tv-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-anime-ui
            namespace: media
        - k8sService:
            serviceName: plex-ui
            namespace: media
        - k8sService:
            serviceName: tautulli-ui
            namespace: media
        - k8sService:
            serviceName: longhorn-backend
            namespace: longhorn-system
        - k8sService:
            serviceName: ntfy
            namespace: automation
    # === Allow access to external for metadata ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
